syntax = "proto3";

package spaceone.api.core.v1;

import "google/protobuf/struct.proto";

message AuthorizationRequest {
    enum Scope {
        NONE = 0;
        PROJECT = 1;
    }

    string service = 1;
    string resource = 2;
    string verb = 3;
    Scope scope = 4;
    string project_id = 5;
}

message AuthorizationResponse {
    string role_type = 1;
}

message AuthenticationRequest {
    string domain_id = 1;
}

message AuthenticationResponse {
    string domain_id = 1;
    string public_key = 2;
}

message EventRequest {
    string service = 1;
    string resource = 2;
    string verb = 3;
    string status = 4;
    google.protobuf.Struct message = 5;
}
